upload qm9 curation

--- a/qm9_curation/qm9_curation.ipynb
+++ b/qm9_curation/qm9_curation.ipynb
@@ -28,6 +28,7 @@
     "from tqdm.notebook import tqdm\n",
     "from collections import defaultdict\n",
     "from pysmiles import read_smiles\n",
+    "from openbabel import pybel\n",
     "import networkx as nx\n",
     "import re\n",
     "print(rdkit.__version__)"
